# conways_game_of_life

./: Cargo.toml  Config.toml  README.md
src/: config.rs  main.rs
