[package]
name = "conways_game_of_life"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = true

[dependencies]
crossterm = "0.25.0"
rand = "0.8.5"
serde = "1.0.144"
serde_derive = "1.0.144"
toml = "0.5.9"
